Add initial CV website files

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <hr>
     <h3><strong>Education</strong></h3>
     <ul>
-      <li>CCC Ho Fok Tong Primary School</li>
-      <li>Carmel Bunnan Tong Memorial Secondary School</li>
+      <li>2002-2008 CCC Ho Fok Tong Primary School</li>
+      <li>2008-2014 Carmel Bunnan Tong Memorial Secondary School</li>
       <li>2016-2020 Hong Kong Baptist Uiversity- Bachelor of Science</li>
     </ul>
 	<hr />
@@ -43,11 +43,11 @@
         </tr>
       </thead>
       <tr>
-        <td>12/2020-07/2021</td>
+        <td>12/2020 - 07/2021</td>
         <td>Night Shift Security Guard</td>
       </tr>
       <tr>
-        <td>12/2019-02/2020</td>
+        <td>12/2019 - 02/2020</td>
         <td>Part-Time homework class tutor</td>
       </tr>
     </table>
